--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "zstruct",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/zstruct.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "rollup --config rollup.config.ts --configPlugin typescript",
     "test": "jest"
@@ -10,12 +11,12 @@
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
       },
       "require": {
         "types": "./dist/index.d.cts",
-        "default": "./dist/zstruct.cjs"
+        "default": "./dist/index.cjs"
       }
     }
   },
